# Fabroku_BackEnd

./: .dokku-checks  .gitignore  CHECKS  Procfile  README-API.md  README-CLI.md  README.md  main.py  nginx.conf.sigil  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  tests.yml
docs/:   logbook.md  LOGS_SYSTEM.md
docs/adr/: 0001-logstream-sse-dokku-tail.md
docs/ideas/developingPlugins/: plugins.md
modules/db/: db.py
modules/db/prisma/: schema.prisma
modules/server/: server.md  server.py
modules/ssh/: id_ed25519  ssh.md  sshConnector.py  ssh_connector.py
modules/user/: user.md
shared/: clear.py
src/: __init__.py
src/cli/: __init__.py  __main__.py  api.py  apps.py  auth.py  config.py  main.py  verify.py
src/config/: asgi.py  celery.py  permission.py  settings.py  urls.py
src/core/: cache_versioning.py  platform_config.py
src/core/adapters/: __init__.py  apps.py  dokku.py  dokku_apps.py  dokku_config.py  dokku_git.py  git_utils.py  github.py  ssh.py
src/core/adapters/dokku_mixins/: __init__.py  dokku_apps.py  dokku_config.py  dokku_domains.py  dokku_git.py  dokku_letsencrypt.py  dokku_ports.py  dokku_postgres.py  dokku_ps.py  dokku_redis.py  dokku_run.py
src/core/adapters/git_mixins/: __init__.py  commit_status.py  repo.py
src/core/adapters/mixins/: __init__.py  dokku_git.py  dokku_letsencrypt.py  dokku_postgres.py
src/core/adapters/utils/: git_callback.py  git_email.py  git_redirect.py  git_repos.py  git_webhook.py  service_proxy.py
src/core/apps/: admin.py  admin_views.py  apps.py  consumers.py  github_integration.py  interactive_crypto.py  interactive_runner.py  models.py  process_scale.py  routing.py  serializers.py  service_types.py  signals.py  tests.py  urls.py  utils.py  views.py  websocket_auth.py
src/core/apps/migrations/: 0001_initial.py  0002_initial.py  0003_alter_app_options_alter_app_table_database.py  0004_app_task_id.py  0005_service_delete_database.py  0006_service_service_type.py  0007_app_name_dokku.py  0008_add_branch_field.py  0009_alter_app_status.py  0010_alter_app_status.py  0011_service_container_name_alter_app_status_and_more.py  0012_alter_app_status.py  0013_app_error_details_app_error_type_app_help_url.py  0014_service_task_id_alter_service_app.py  0015_app_idx_app_name_app_unique_app_name.py  0016_app_last_commit_sha.py  0017_cacheversionindex.py  0018_apprunartifact.py  0019_interactive_run_session_and_events.py  0020_appprocessscale.py  0021_soft_delete_apps_services.py  0022_postgres_connect_audit.py  0023_interactive_runner.py
src/core/apps/mixins/: __init__.py  app.py  create_app.py  delete_app.py  service.py  update_app.py
src/core/auth_user/: admin.py  apps.py  authentication.py  cli_auth.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
src/core/auth_user/allowed_emails/: __init__.py  admin.py  models.py  serializers.py  views.py
src/core/auth_user/migrations/: 0001_initial.py  0002_user_git_token.py  0003_remove_user_registration_user_avatar_url.py  (+4 more)
src/core/logs/: admin.py  apps.py  logstream.py  middleware.py  models.py  serializers.py  ssh_audit.py  tests.py  urls.py  views.py
src/core/project/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/django_project/: healthz.py  settings.py  urls.py
src/fabroku/: __init__.py  __main__.py
src/fabroku/application/: __init__.py
src/fabroku/cli/: __init__.py  __main__.py  cli.py
src/fabroku/domain/: __init__.py  ports.py
src/fabroku/infrastructure/: __init__.py  django_bootstrap.py  session.py  user_store.py
(+82 files in other folders)
