
[project]
name = "Fabroku"
version = "0.1"
description = "A system for managing the CI/CD of the F.S;"
authors = [
    {name = "Snow-sr", email = "joaofelipi877@gmail.com, snowsr.dev@gmail.com, snowsr@cock.li"},
]
dependencies = [
    "fastapi>=0.96.1",
    "uvicorn>=0.22.0",
    "paramiko>=3.2.0",
    "python-dotenv>=1.0.0",
    "prisma>=0.9.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
